src/scss/pages/main/benefits.scss
@use "sass:map";
@use "../../utils/vars.scss" as *;
@use "../../utils/mixins.scss" as *;

.benefits {
    padding: 84px 0 100px 0;

    &__wrap {}

    &__title {
        font-weight: 800;
        font-size: 45px;
        text-align: center;
        color: map.get($colors, dark-blue);
        margin-bottom: 31px;

    }

    &__desc {
        display: block;
        font-weight: 500;
        font-size: 18px;
        line-height: 122%;
        text-align: center;
        color: map.get($colors, dark-blue);
        width: 100%;
        max-width: 600px;
        margin: 0 auto 62px;
        line-height: 1.48;
    }

    &__cards {
        display: flex;
        gap: 30px;
        justify-content: space-between;

        @include respond-to(laptop-m) {
            flex-direction: column;
        }

    }

    &__card {
        perspective: 5000px;
        width: 100%;
        max-width: 410px;
        cursor: pointer;

        @include respond-to(laptop-m) {
            max-width: 100%;
        }

        &:hover .benefits__card-inner {
            transform: rotateY(180deg);
        }

        &-inner {
            position: relative;
            width: 100%;
            max-width: 410px;
            height: 525px;
            transition: transform 0.6s;
            transform-style: preserve-3d;

            @include respond-to(laptop-m) {
                max-width: 100%;
            }
        }

        &-front,
        &-back {
            position: absolute;
            width: 100%;
            height: 100%;
            backface-visibility: hidden;
        }

        &-front {

            &-bg {
                position: absolute;
                height: 100%;
                width: 100%;

                &::after {
                    position: absolute;
                    content: "";
                    top: 0;
                    right: 0;
                    bottom: 0;
                    left: 0;
                    background: map.get($colors, overlay-2);
                }

                picture {
                    height: 100%;
                }

                img {
                    width: 100%;
                    object-fit: cover;
                    height: 100%;
                }
            }

            &-face {
                display: flex;
                flex-direction: column;
                gap: 22px;
                position: absolute;
                top: 50%;
                left: 50%;
                transform: translate(-52%, -50%);
                z-index: 1;
                width: 100%;
                max-width: 328px;
            }

            &-title {
                font-weight: 800;
                font-size: 40px;
                color: #fff;
                text-align: center;
            }
        }

        .nut-1 {
            width: 66px;
            height: 84px;
        }

        .nut-2 {
            width: 51px;
            height: 51px;
        }

        .nut-3 {
            width: 59px;
            height: 54px;
        }

        &-svg {
            margin: 0 auto;
        }

        &-back {
            transform: rotateY(180deg);

            &-face {
                position: absolute;
                // padding: 0 15px;
                top: 52%;
                left: 50%;
                transform: translate(-50%, -50%);
                z-index: 1;
                width: 100%;
                max-width: 328px;
            }

            &-bg {

                &::after {
                    position: absolute;
                    display: block;
                    content: "";
                    top: 0;
                    right: 0;
                    bottom: 0;
                    left: 0;
                    background: map.get($colors, overlay-green);
                }

                img {
                    width: 100%;
                    height: 525px;
                    object-fit: cover;
                }
            }

            &-title {
                font-weight: 800;
                font-size: 40px;
                color: #fff;
                text-align: center;
                margin-bottom: 22px;
            }

            &-info {
                font-weight: 600;
                font-size: 18px;
                line-height: 1.25;
                letter-spacing: 0.01em;
                text-align: center;
                color: #fff;
                margin-bottom: 24px;

                &:last-child {
                    margin-bottom: 0;
                }
            }

            &-svg {
                position: relative;
                left: 6px;
                margin-bottom: 6px;
            }
        }

    }
}

